fixed overflow on mobile

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -10,6 +10,7 @@ body {
 	font-size: 19px;
 	font-weight: 300;
   overflow-x: hidden;
+
 }
 a { color: #81b4eb;  }
 a, button { transition: all 0.3s ease; }
@@ -21,6 +22,10 @@ a:focus {
 
 
 @import url("https://fonts.googleapis.com/css?family=Fjalla+One&display=swap");
+
+.wrap {
+  overflow-x: hidden;
+}
 
 .goal-cont {
 	background-color: #e02a2a;
@@ -507,9 +512,6 @@ hr { width: 65%; }
 }
 
 @media (max-width: 1900px) {
-  body {
-      overflow-x: hidden;
-  }
 	.tm-section-intro {	background-size: 1900px 800px; }
 }
 
@@ -521,10 +523,6 @@ hr { width: 65%; }
 }
 
 @media (max-width: 480px) {
-
-  body {
-      overflow-x: hidden;
-  }
 	.tm-section-intro-title {
 	    font-size: 1.5rem;
 	    margin-bottom: 1.5rem;
@@ -564,11 +562,6 @@ hr { width: 65%; }
 /* 2. Carousel
 ----------------------*/
 @media (max-width: 767px) {
-
-  body {
-      overflow-x: hidden;
-  }
-
 	.tm-carousel {
 		margin-top: 10%;
 		margin-bottom: 10%;
@@ -590,9 +583,6 @@ hr { width: 65%; }
 /* 3. Image and text 2 column block
 ----------------------------------------*/
 @media (max-width: 1600px) {
-  body {
-      overflow-x: hidden;
-  }
 	.tm-2-col-text {
 		padding-left: 5%;
 		padding-right: 5%;
@@ -618,9 +608,6 @@ hr { width: 65%; }
 }
 
 @media (max-width: 991px) {
-  body {
-      overflow-x: hidden;
-  }
 	.tm-2-col-img-text { display: block; }
 
 	.tm-2-col-img img {	margin: 0 auto;	}
@@ -647,9 +634,6 @@ hr { width: 65%; }
 }
 
 @media (max-width: 480px) {
-  body {
-      overflow-x: hidden;
-  }
 	.tm-2-col-text { padding: 10%; }	
 }
 
@@ -657,9 +641,6 @@ hr { width: 65%; }
 /* 4. icon and text 4 boxes
 ----------------------------*/
 @media (max-width: 1199px) {
-  body {
-      overflow-x: hidden;
-  }
 	.tm-icon-text-box {	margin: 0 auto 30px; }
 }
 
@@ -689,9 +670,6 @@ hr { width: 65%; }
 /* 5. contact 
 --------------*/
 @media (max-width: 1199px) {
-  body {
-      overflow-x: hidden;
-  }
 	.tm-form-group-right { padding-left: 0;	}	
 }
 
